[project]
name = "music-analysis"
version = "0.1.0"
description = "Analyze PCM WAV files and generate an HTML lossless verification report."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
]

[project.scripts]
analyze-wav = "analyze_wav:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "analyze_wav.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "analyze_wav.py",
    "README.md",
    "pyproject.toml",
]
